Fixed container margin-bottom to avoid footer overlap, temporary removed token tooltip

--- a/automa/static/automa/base/base.sass
+++ b/automa/static/automa/base/base.sass
@@ -41,7 +41,9 @@ body
 .container
     margin: 2em
     margin-top: 0
+    margin-bottom: 7em
     text-align: center
+        
 
 //? ------------------------
 //? ------ COMPONENTS -------
@@ -98,6 +100,9 @@ img
 #dungeon
     color: $secondary-color
 
+footer
+    margin-top: auto
+
 #header,
 footer
     display: flex
@@ -106,9 +111,6 @@ footer
     padding: 1em 2em
     background: $black-navbar
     color: white
-
-footer
-    margin-top: auto
 
     .creator
         color: rgba(255,255,255,0.5)
